libreria/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> ID SHIFT_LEFT STRING SEMICOLON
Rule 2     statement -> FLOAT ID EQUALS expr SEMICOLON
Rule 3     statement -> STRING1 ID EQUALS expr SEMICOLON
Rule 4     statement -> BOOL ID EQUALS expr SEMICOLON
Rule 5     statement -> CHAR ID EQUALS expr SEMICOLON
Rule 6     statement -> INT ID EQUALS expr SEMICOLON
Rule 7     statement -> CHAR ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 8     statement -> FLOAT ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 9     statement -> BOOL ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 10    statement -> BOOL ID LBRACKET RBRACKET EQUALS LKEYS val_list RKEYS SEMICOLON
Rule 11    val_list -> ID
Rule 12    val_list -> val_list COMMA ID
Rule 13    statement -> STRING1 ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 14    statement -> STRING1 ID LBRACKET NUMBER RBRACKET EQUALS LKEYS string_list RKEYS SEMICOLON
Rule 15    string_list -> STRING
Rule 16    string_list -> string_list COMMA STRING
Rule 17    statement -> INT ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 18    statement -> INT ID LBRACKET RBRACKET SEMICOLON
Rule 19    statement -> INT ID LBRACKET RBRACKET EQUALS LKEYS number_list RKEYS SEMICOLON
Rule 20    number_list -> NUMBER
Rule 21    number_list -> number_list COMMA NUMBER
Rule 22    expr -> expr MINUS expr
Rule 23    expr -> expr PLUS expr
Rule 24    expr -> expr TIMES expr
Rule 25    expr -> expr DIVIDE expr
Rule 26    expr -> NUMBER
Rule 27    expr -> ID
Rule 28    statement -> IF LPAREND ID EQ NUMBER RPAREND LKEYS statement RKEYS ELSE LKEYS statement RKEYS
Rule 29    statement -> FOR LPAREND INT ID EQUALS NUMBER SEMICOLON ID COLON NUMBER SEMICOLON ID AUM RPAREND LKEYS statement RKEYS
Rule 30    statement -> INT ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID AUM ID SEMICOLON RKEYS
Rule 31    statement -> INT ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID TIMES ID SEMICOLON RKEYS
Rule 32    statement -> INT ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID MINUS ID SEMICOLON RKEYS
Rule 33    statement -> INT ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID DIVIDE ID SEMICOLON RKEYS
Rule 34    statement -> CLASS ID LKEYS PRIVATE POINTS INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON
Rule 35    statement -> CLASS ID LKEYS PRIVATE POINTS INT ID SEMICOLON INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID COMMA INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON
Rule 36    statement -> INT MAIN LPAREND RPAREND LKEYS statement RETURN NUMBER SEMICOLON RKEYS

Terminals, with rules where they appear

AUM                  : 29 30
BOOL                 : 4 9 10
CHAR                 : 5 7
CLASS                : 34 35
COLON                : 29
COMMA                : 12 16 21 30 31 32 33 35
DIVIDE               : 25 33
ELSE                 : 28
EQ                   : 28
EQUALS               : 2 3 4 5 6 10 14 19 29 34 35 35
FLOAT                : 2 8
FOR                  : 29
ID                   : 1 2 3 4 5 6 7 8 9 10 11 12 13 14 17 18 19 27 28 29 29 29 30 30 30 30 30 31 31 31 31 31 32 32 32 32 32 33 33 33 33 33 34 34 34 34 34 34 35 35 35 35 35 35 35 35 35 35
IF                   : 28
INT                  : 6 17 18 19 29 30 30 30 31 31 31 32 32 32 33 33 33 34 34 35 35 35 35 36
LBRACKET             : 7 8 9 10 13 14 17 18 19
LKEYS                : 10 14 19 28 28 29 30 31 32 33 34 34 35 35 36
LPAREND              : 28 29 30 31 32 33 34 35 36
MAIN                 : 36
MINUS                : 22 32
NUMBER               : 7 8 9 13 14 17 20 21 26 28 29 29 36
PLUS                 : 23
POINTS               : 34 34 35 35
PRIVATE              : 34 35
PUBLIC               : 34 35
RBRACKET             : 7 8 9 10 13 14 17 18 19
RETURN               : 30 31 32 33 36
RKEYS                : 10 14 19 28 28 29 30 31 32 33 34 34 35 35 36
RPAREND              : 28 29 30 31 32 33 34 35 36
SEMICOLON            : 1 2 3 4 5 6 7 8 9 10 13 14 17 18 19 29 29 30 31 32 33 34 34 34 35 35 35 35 35 36
SHIFT_LEFT           : 1
STRING               : 1 15 16
STRING1              : 3 13 14
TIMES                : 24 31
error                : 

Nonterminals, with rules where they appear

expr                 : 2 3 4 5 6 22 22 23 23 24 24 25 25
number_list          : 19 21
statement            : 28 28 29 36 0
string_list          : 14 16
val_list             : 10 12

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . ID SHIFT_LEFT STRING SEMICOLON
    (2) statement -> . FLOAT ID EQUALS expr SEMICOLON
    (3) statement -> . STRING1 ID EQUALS expr SEMICOLON
    (4) statement -> . BOOL ID EQUALS expr SEMICOLON
    (5) statement -> . CHAR ID EQUALS expr SEMICOLON
    (6) statement -> . INT ID EQUALS expr SEMICOLON
    (7) statement -> . CHAR ID LBRACKET NUMBER RBRACKET SEMICOLON
    (8) statement -> . FLOAT ID LBRACKET NUMBER RBRACKET SEMICOLON
    (9) statement -> . BOOL ID LBRACKET NUMBER RBRACKET SEMICOLON
    (10) statement -> . BOOL ID LBRACKET RBRACKET EQUALS LKEYS val_list RKEYS SEMICOLON
    (13) statement -> . STRING1 ID LBRACKET NUMBER RBRACKET SEMICOLON
    (14) statement -> . STRING1 ID LBRACKET NUMBER RBRACKET EQUALS LKEYS string_list RKEYS SEMICOLON
    (17) statement -> . INT ID LBRACKET NUMBER RBRACKET SEMICOLON
    (18) statement -> . INT ID LBRACKET RBRACKET SEMICOLON
    (19) statement -> . INT ID LBRACKET RBRACKET EQUALS LKEYS number_list RKEYS SEMICOLON
    (28) statement -> . IF LPAREND ID EQ NUMBER RPAREND LKEYS statement RKEYS ELSE LKEYS statement RKEYS
    (29) statement -> . FOR LPAREND INT ID EQUALS NUMBER SEMICOLON ID COLON NUMBER SEMICOLON ID AUM RPAREND LKEYS statement RKEYS
    (30) statement -> . INT ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID AUM ID SEMICOLON RKEYS
    (31) statement -> . INT ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID TIMES ID SEMICOLON RKEYS
    (32) statement -> . INT ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID MINUS ID SEMICOLON RKEYS
    (33) statement -> . INT ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID DIVIDE ID SEMICOLON RKEYS
    (34) statement -> . CLASS ID LKEYS PRIVATE POINTS INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON
    (35) statement -> . CLASS ID LKEYS PRIVATE POINTS INT ID SEMICOLON INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID COMMA INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON
    (36) statement -> . INT MAIN LPAREND RPAREND LKEYS statement RETURN NUMBER SEMICOLON RKEYS

    ID              shift and go to state 2
    FLOAT           shift and go to state 3
    STRING1         shift and go to state 4
    BOOL            shift and go to state 5
    CHAR            shift and go to state 6
    INT             shift and go to state 7
    IF              shift and go to state 8
    FOR             shift and go to state 9
    CLASS           shift and go to state 10

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> ID . SHIFT_LEFT STRING SEMICOLON

    SHIFT_LEFT      shift and go to state 11


state 3

    (2) statement -> FLOAT . ID EQUALS expr SEMICOLON
    (8) statement -> FLOAT . ID LBRACKET NUMBER RBRACKET SEMICOLON

    ID              shift and go to state 12


state 4

    (3) statement -> STRING1 . ID EQUALS expr SEMICOLON
    (13) statement -> STRING1 . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (14) statement -> STRING1 . ID LBRACKET NUMBER RBRACKET EQUALS LKEYS string_list RKEYS SEMICOLON

    ID              shift and go to state 13


state 5

    (4) statement -> BOOL . ID EQUALS expr SEMICOLON
    (9) statement -> BOOL . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (10) statement -> BOOL . ID LBRACKET RBRACKET EQUALS LKEYS val_list RKEYS SEMICOLON

    ID              shift and go to state 14


state 6

    (5) statement -> CHAR . ID EQUALS expr SEMICOLON
    (7) statement -> CHAR . ID LBRACKET NUMBER RBRACKET SEMICOLON

    ID              shift and go to state 15


state 7

    (6) statement -> INT . ID EQUALS expr SEMICOLON
    (17) statement -> INT . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (18) statement -> INT . ID LBRACKET RBRACKET SEMICOLON
    (19) statement -> INT . ID LBRACKET RBRACKET EQUALS LKEYS number_list RKEYS SEMICOLON
    (30) statement -> INT . ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID AUM ID SEMICOLON RKEYS
    (31) statement -> INT . ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID TIMES ID SEMICOLON RKEYS
    (32) statement -> INT . ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID MINUS ID SEMICOLON RKEYS
    (33) statement -> INT . ID LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID DIVIDE ID SEMICOLON RKEYS
    (36) statement -> INT . MAIN LPAREND RPAREND LKEYS statement RETURN NUMBER SEMICOLON RKEYS

    ID              shift and go to state 16
    MAIN            shift and go to state 17


state 8

    (28) statement -> IF . LPAREND ID EQ NUMBER RPAREND LKEYS statement RKEYS ELSE LKEYS statement RKEYS

    LPAREND         shift and go to state 18


state 9

    (29) statement -> FOR . LPAREND INT ID EQUALS NUMBER SEMICOLON ID COLON NUMBER SEMICOLON ID AUM RPAREND LKEYS statement RKEYS

    LPAREND         shift and go to state 19


state 10

    (34) statement -> CLASS . ID LKEYS PRIVATE POINTS INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON
    (35) statement -> CLASS . ID LKEYS PRIVATE POINTS INT ID SEMICOLON INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID COMMA INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON

    ID              shift and go to state 20


state 11

    (1) statement -> ID SHIFT_LEFT . STRING SEMICOLON

    STRING          shift and go to state 21


state 12

    (2) statement -> FLOAT ID . EQUALS expr SEMICOLON
    (8) statement -> FLOAT ID . LBRACKET NUMBER RBRACKET SEMICOLON

    EQUALS          shift and go to state 22
    LBRACKET        shift and go to state 23


state 13

    (3) statement -> STRING1 ID . EQUALS expr SEMICOLON
    (13) statement -> STRING1 ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (14) statement -> STRING1 ID . LBRACKET NUMBER RBRACKET EQUALS LKEYS string_list RKEYS SEMICOLON

    EQUALS          shift and go to state 24
    LBRACKET        shift and go to state 25


state 14

    (4) statement -> BOOL ID . EQUALS expr SEMICOLON
    (9) statement -> BOOL ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (10) statement -> BOOL ID . LBRACKET RBRACKET EQUALS LKEYS val_list RKEYS SEMICOLON

    EQUALS          shift and go to state 26
    LBRACKET        shift and go to state 27


state 15

    (5) statement -> CHAR ID . EQUALS expr SEMICOLON
    (7) statement -> CHAR ID . LBRACKET NUMBER RBRACKET SEMICOLON

    EQUALS          shift and go to state 28
    LBRACKET        shift and go to state 29


state 16

    (6) statement -> INT ID . EQUALS expr SEMICOLON
    (17) statement -> INT ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (18) statement -> INT ID . LBRACKET RBRACKET SEMICOLON
    (19) statement -> INT ID . LBRACKET RBRACKET EQUALS LKEYS number_list RKEYS SEMICOLON
    (30) statement -> INT ID . LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID AUM ID SEMICOLON RKEYS
    (31) statement -> INT ID . LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID TIMES ID SEMICOLON RKEYS
    (32) statement -> INT ID . LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID MINUS ID SEMICOLON RKEYS
    (33) statement -> INT ID . LPAREND INT ID COMMA INT ID RPAREND LKEYS RETURN ID DIVIDE ID SEMICOLON RKEYS

    EQUALS          shift and go to state 30
    LBRACKET        shift and go to state 31
    LPAREND         shift and go to state 32


state 17

    (36) statement -> INT MAIN . LPAREND RPAREND LKEYS statement RETURN NUMBER SEMICOLON RKEYS

    LPAREND         shift and go to state 33


state 18

    (28) statement -> IF LPAREND . ID EQ NUMBER RPAREND LKEYS statement RKEYS ELSE LKEYS statement RKEYS

    ID              shift and go to state 34


state 19

    (29) statement -> FOR LPAREND . INT ID EQUALS NUMBER SEMICOLON ID COLON NUMBER SEMICOLON ID AUM RPAREND LKEYS statement RKEYS

    INT             shift and go to state 35


state 20

    (34) statement -> CLASS ID . LKEYS PRIVATE POINTS INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON
    (35) statement -> CLASS ID . LKEYS PRIVATE POINTS INT ID SEMICOLON INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID COMMA INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON

    LKEYS           shift and go to state 36


state 21

    (1) statement -> ID SHIFT_LEFT STRING . SEMICOLON

    SEMICOLON       shift and go to state 37


state 22

    (2) statement -> FLOAT ID EQUALS . expr SEMICOLON
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr PLUS expr
    (24) expr -> . expr TIMES expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . NUMBER
    (27) expr -> . ID

    NUMBER          shift and go to state 40
    ID              shift and go to state 38

    expr                           shift and go to state 39

state 23

    (8) statement -> FLOAT ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 41


state 24

    (3) statement -> STRING1 ID EQUALS . expr SEMICOLON
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr PLUS expr
    (24) expr -> . expr TIMES expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . NUMBER
    (27) expr -> . ID

    NUMBER          shift and go to state 40
    ID              shift and go to state 38

    expr                           shift and go to state 42

state 25

    (13) statement -> STRING1 ID LBRACKET . NUMBER RBRACKET SEMICOLON
    (14) statement -> STRING1 ID LBRACKET . NUMBER RBRACKET EQUALS LKEYS string_list RKEYS SEMICOLON

    NUMBER          shift and go to state 43


state 26

    (4) statement -> BOOL ID EQUALS . expr SEMICOLON
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr PLUS expr
    (24) expr -> . expr TIMES expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . NUMBER
    (27) expr -> . ID

    NUMBER          shift and go to state 40
    ID              shift and go to state 38

    expr                           shift and go to state 44

state 27

    (9) statement -> BOOL ID LBRACKET . NUMBER RBRACKET SEMICOLON
    (10) statement -> BOOL ID LBRACKET . RBRACKET EQUALS LKEYS val_list RKEYS SEMICOLON

    NUMBER          shift and go to state 45
    RBRACKET        shift and go to state 46


state 28

    (5) statement -> CHAR ID EQUALS . expr SEMICOLON
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr PLUS expr
    (24) expr -> . expr TIMES expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . NUMBER
    (27) expr -> . ID

    NUMBER          shift and go to state 40
    ID              shift and go to state 38

    expr                           shift and go to state 47

state 29

    (7) statement -> CHAR ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 48


state 30

    (6) statement -> INT ID EQUALS . expr SEMICOLON
    (22) expr -> . expr MINUS expr
    (23) expr -> . expr PLUS expr
    (24) expr -> . expr TIMES expr
    (25) expr -> . expr DIVIDE expr
    (26) expr -> . NUMBER
    (27) expr -> . ID

    NUMBER          shift and go to state 40
    ID              shift and go to state 38

    expr                           shift and go to state 49

state 31

    (17) statement -> INT ID LBRACKET . NUMBER RBRACKET SEMICOLON
    (18) statement -> INT ID LBRACKET . RBRACKET SEMICOLON
    (19) statement -> INT ID LBRACKET . RBRACKET EQUALS LKEYS number_list RKEYS SEMICOLON

    NUMBER          shift and go to state 50
    RBRACKET        shift and go to state 51


state 32

    (30) statement -> INT ID LPAREND . INT ID COMMA INT ID RPAREND LKEYS RETURN ID AUM ID SEMICOLON RKEYS
    (31) statement -> INT ID LPAREND . INT ID COMMA INT ID RPAREND LKEYS RETURN ID TIMES ID SEMICOLON RKEYS
    (32) statement -> INT ID LPAREND . INT ID COMMA INT ID RPAREND LKEYS RETURN ID MINUS ID SEMICOLON RKEYS
    (33) statement -> INT ID LPAREND . INT ID COMMA INT ID RPAREND LKEYS RETURN ID DIVIDE ID SEMICOLON RKEYS

    INT             shift and go to state 52


state 33

    (36) statement -> INT MAIN LPAREND . RPAREND LKEYS statement RETURN NUMBER SEMICOLON RKEYS

    RPAREND         shift and go to state 53


state 34

    (28) statement -> IF LPAREND ID . EQ NUMBER RPAREND LKEYS statement RKEYS ELSE LKEYS statement RKEYS

    EQ              shift and go to state 54


state 35

    (29) statement -> FOR LPAREND INT . ID EQUALS NUMBER SEMICOLON ID COLON NUMBER SEMICOLON ID AUM RPAREND LKEYS statement RKEYS

    ID              shift and go to state 55


state 36

    (34) statement -> CLASS ID LKEYS . PRIVATE POINTS INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON
    (35) statement -> CLASS ID LKEYS . PRIVATE POINTS INT ID SEMICOLON INT ID SEMICOLON PUBLIC POINTS ID LPAREND INT ID COMMA INT ID RPAREND LKEYS ID EQUALS ID SEMICOLON ID EQUALS ID SEMICOLON RKEYS RKEYS SEMICOLON

    PRIVATE         shift and go to state 56


state 37

    (1) statement -> ID SHIFT_LEFT STRING SEMICOLON .

    $end            reduce using rule 1 (statement -> ID SHIFT_LEFT STRING SEMICOLON .)
    RETURN          reduce using rule 1 (statement -> ID SHIFT_LEFT STRING SEMICOLON .)
    RKEYS           reduce using rule 1 (statement -> ID SHIFT_LEFT STRING SEMICOLON .)


state 38

    (27) expr -> ID .

    SEMICOLON       reduce using rule 27 (expr -> ID .)
    MINUS           reduce using rule 27 (expr -> ID .)
    PLUS            reduce using rule 27 (expr -> ID .)
    TIMES           reduce using rule 27 (expr -> ID .)
    DIVIDE          reduce using rule 27 (expr -> ID .)


state 39

    (2) statement -> FLOAT ID EQUALS expr . SEMICOLON
    (22) expr -> expr . MINUS expr
    (23) expr -> expr . PLUS expr
    (24) expr -> expr . TIMES expr
    (25) expr -> expr . DIVIDE expr

    SEMICOLON       shift and go to state 57
    MINUS           shift and go to state 58
    PLUS            shift and go to state 59
    TIMES           shift and go to state 60
    DIVIDE          shift and go to state 61


state 40

    (26) expr -> NUMBER .

    SEMICOLON       reduce using rule 26 (expr -> NUMBER .)
    MINUS           reduce using rule 26 (expr -> NUMBER .)
    PLUS            reduce using rule 26 (expr -> NUMBER .)
    TIMES           reduce using rule 26 (expr -> NUMBER .)
    DIVIDE          reduce using rule 26 (expr -> NUMBER .)


state 41

    (8) statement -> FLOAT ID LBRACKET NUMBER . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 62


state 42

    (3) statement -> STRING1 ID EQUALS expr . SEMICOLON
    (22) expr -> expr . MINUS expr
    (23) expr -> expr . PLUS expr
    (24) expr -> expr . TIMES expr
    (25) expr -> expr . DIVIDE expr

    SEMICOLON       shift and go to state 63
    MINUS           shift and go to state 58
    PLUS            shift and go to state 59
    TIMES           shift and go to state 60
    DIVIDE          shift and go to state 61


state 43

    (13) statement -> STRING1 ID LBRACKET NUMBER . RBRACKET SEMICOLON
    (14) statement -> STRING1 ID LBRACKET NUMBER . RBRACKET EQUALS LKEYS string_list RKEYS SEMICOLON

    RBRACKET        shift and go to state 64


state 44

    (4) statement -> BOOL ID EQUALS expr . SEMICOLON
    (22) expr -> expr . MINUS expr
    (23) expr -> expr . PLUS expr
    (24) expr -> expr . TIMES expr
    (25) expr -> expr . DIVIDE expr

    SEMICOLON       shift and go to state 65
    MINUS           shift and go to state 58
    PLUS            shift and go to state 59
    TIMES           shift and go to state 60
    DIVIDE          shift and go to state 61


state 45

    (9) statement -> BOOL ID LBRACKET NUMBER . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 66


state 46

    (10) statement -> BOOL ID LBRACKET RBRACKET . EQUALS LKEYS val_list RKEYS SEMICOLON

    EQUALS          shift and go to state 67


state 47

    (5) statement -> CHAR ID EQUALS expr . SEMICOLON
    (22) expr -> expr . MINUS expr
    (23) expr -> expr . PLUS expr
    (24) expr -> expr . TIMES expr
    (25) expr -> expr . DIVIDE expr
